width fix on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ h3 {
   background-color: #0b0c10;
   color: whitesmoke;
   margin: 0 auto;
-  min-width: 375px;
+  min-width: 320px;
 }
 
 header,
@@ -254,10 +254,14 @@ header nav .selected {
 
 @media screen and (max-width: 424px) {
   .hero-container h1 {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
 
   .hero-container h1 span {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
+  }
+
+  .hero-container h2 {
+    font-size: 2rem;
   }
 }
